Added Roar Ability

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -84,6 +84,7 @@
   "item.lotmcraft.tsunami_ability": "Tsunami",
   "item.lotmcraft.earthquake_ability": "Earthquake",
   "item.lotmcraft.hurricane_ability": "Hurricane",
+  "item.lotmcraft.roar_ability": "Roar",
 
 
   "item.lotmcraft.toxic_smoke_ability": "Toxic Smoke",
@@ -195,6 +196,7 @@
   "item.lotmcraft.physical_enhancements_darkness_ability": "Physical Enhancements",
   "item.lotmcraft.physical_enhancements_mother_ability": "Physical Enhancements",
   "item.lotmcraft.physical_enhancements_visionary_ability": "Physical Enhancements",
+  "item.lotmcraft.physical_enhancements_wheel_of_fortune_ability": "Physical Enhancements",
 
   "item.lotmcraft.flaming_hit_ability": "Flaming Hit",
   "item.lotmcraft.fire_resistance_ability": "Fire Resistance",
