--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -104,12 +104,13 @@
   "item.lotmcraft.flaming_jump_ability": "Flaming Jump",
   "item.lotmcraft.underwater_breathing_ability": "Underwater Breathing",
   "item.lotmcraft.shapeshifting_ability": "Shapeshifting",
-  "item.lotmcraft.puppeteering_ability": "Pupeteering",
+  "item.lotmcraft.puppeteering_ability": "Puppeteering",
   "ability.lotmcraft.puppeteering.no_entity_found": "No Entity to control found",
   "ability.lotmcraft.puppeteering.entity_turned": "Turned the entity into your marionette",
   "ability.lotmcraft.puppeteering.entity_turned_failed": "Failed to turn the entity into your marionette",
   "ability.lotmcraft.puppeteering.entity_teleport": "Moved Entity",
   "ability.lotmcraft.puppeteering.follow_mode": "Follow Mode",
+  "ability.lotmcraft.puppeteering.attack": "Attack",
   "ability.lotm.puppeteering.entity_released": "Released the Marionette",
   "item.lotmcraft.marionette_controlling_ability": "Marionette Controlling",
 
