Added ability icons for Red Priest and Door Pathway

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -63,6 +63,13 @@
   "ability.lotmcraft.pyrokinesis.flaming_spear": "Flaming Spear",
   "ability.lotmcraft.pyrokinesis.flame_wave": "Flame Wave",
   "item.lotmcraft.cull_ability": "Cull",
+  "item.lotmcraft.flame_mastery_ability": "Flame Mastery",
+  "item.lotmcraft.steel_mastery_ability": "Steel Mastery",
+  "item.lotmcraft.chain_of_command_ability": "Chain of Command",
+  "item.lotmcraft.fog_of_war_ability": "Fog of War",
+  "item.lotmcraft.war_cry_ability": "War Cry",
+  "item.lotmcraft.war_song_ability": "War Song",
+  "item.lotmcraft.essence_of_war_ability": "Essence of War",
 
   "item.lotmcraft.raging_blows_ability": "Raging Blows",
   "item.lotmcraft.water_manipulation_ability": "Water Manipulation",
@@ -169,6 +176,15 @@
   "item.lotmcraft.recording_ability": "Recording",
   "item.lotmcraft.blink_ability": "Blink",
   "item.lotmcraft.travelers_door_ability": "Travelers Door",
+  "item.lotmcraft.space_concealment_ability": "Space Concealment",
+  "item.lotmcraft.exile_ability": "Exile",
+  "item.lotmcraft.door_substitution_ability": "Door Substitution",
+  "item.lotmcraft.wandering_ability": "Wandering",
+  "item.lotmcraft.conceptualization_ability": "Conceptualization",
+  "item.lotmcraft.sealing_ability": "Sealing",
+  "item.lotmcraft.space_tearing_ability": "Space Tearing",
+  "item.lotmcraft.black_hole_ability": "Black Hole",
+  "item.lotmcraft.distortion_field_ability": "Distortion Field",
 
   "item.lotmcraft.spectating_ability": "Spectating",
   "item.lotmcraft.telepathy_ability": "Telepathy",
