--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -184,6 +184,8 @@
   "item.lotmcraft.blink_ability": "Blink",
   "item.lotmcraft.travelers_door_ability": "Travelers Door",
   "item.lotmcraft.space_concealment_ability": "Space Concealment",
+  "ability.lotmcraft.space_concealment.other": "Target Other",
+  "ability.lotmcraft.space_concealment.self": "Target Self",
   "item.lotmcraft.exile_ability": "Exile",
   "item.lotmcraft.door_substitution_ability": "Door Substitution",
   "item.lotmcraft.wandering_ability": "Wandering",
