--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -186,6 +186,7 @@
   "item.lotmcraft.space_concealment_ability": "Space Concealment",
   "ability.lotmcraft.space_concealment.other": "Target Other",
   "ability.lotmcraft.space_concealment.self": "Target Self",
+  "ability.lotmcraft.space_concealment.collapse": "Collapse Spaces",
   "item.lotmcraft.exile_ability": "Exile",
   "item.lotmcraft.door_substitution_ability": "Door Substitution",
   "item.lotmcraft.wandering_ability": "Wandering",
