Red priest Abilities

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -67,6 +67,9 @@
   "ability.lotmcraft.pyrokinesis.flame_wave": "Flame Wave",
   "item.lotmcraft.cull_ability": "Cull",
   "item.lotmcraft.flame_mastery_ability": "Flame Mastery",
+  "ability.lotmcraft.flame_mastery.fireball_barrage": "Fireball Barrage",
+  "ability.lotmcraft.flame_mastery.eruption": "Eruption",
+  "ability.lotmcraft.flame_mastery.flame_transformation": "Flame Transformation",
   "item.lotmcraft.steel_mastery_ability": "Steel Mastery",
   "item.lotmcraft.chain_of_command_ability": "Chain of Command",
   "item.lotmcraft.fog_of_war_ability": "Fog of War",
