Red priest Abilities

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -74,6 +74,7 @@
   "item.lotmcraft.chain_of_command_ability": "Chain of Command",
   "item.lotmcraft.fog_of_war_ability": "Fog of War",
   "item.lotmcraft.war_cry_ability": "War Cry",
+  "item.lotmcraft.war_cry_ability.description": "A deafening cry that damages your enemies and boosts your abilities",
   "item.lotmcraft.war_song_ability": "War Song",
   "item.lotmcraft.essence_of_war_ability": "Essence of War",
 
