--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -71,6 +71,8 @@
   "ability.lotmcraft.flame_mastery.eruption": "Eruption",
   "ability.lotmcraft.flame_mastery.flame_transformation": "Flame Transformation",
   "item.lotmcraft.steel_mastery_ability": "Steel Mastery",
+  "ability.lotmcraft.steel_mastery.steel_skin": "Steel Skin",
+  "ability.lotmcraft.steel_mastery.steel_chains": "Steel Chains",
   "item.lotmcraft.chain_of_command_ability": "Chain of Command",
   "item.lotmcraft.fog_of_war_ability": "Fog of War",
   "item.lotmcraft.war_cry_ability": "War Cry",
