--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -134,13 +134,12 @@
   "ability.lotmcraft.puppeteering.attack": "Attack",
   "ability.lotm.puppeteering.entity_released": "Released the Marionette",
   "item.lotmcraft.marionette_controlling_ability": "Marionette Controlling",
+  "item.lotmcraft.marionette_controlling_ability.description": "Gain more options for controlling you marionettes. Press shift to cycle through all your marionettes",
   "ability.lotmcraft.marionette_controlling.damage_auto_swap": "Auto Swap on Damage",
   "ability.lotmcraft.marionette_controlling.swap": "Swap Places",
   "ability.lotmcraft.marionette_controlling.control": "Control",
   "ability.lotmcraft.marionette_controlling.auto_swap": "Auto Swap",
   "ability.lotmcraft.marionette_controlling.get_item": "Get marionette Item",
-
-
 
   "item.lotmcraft.midnight_poem_ability": "Midnight Poem",
   "ability.lotmcraft.midnight_poem.lullaby": "Lullaby",
@@ -255,6 +254,9 @@
 
   "item.lotmcraft.void_immunity_ability": "Void Immunity",
 
+  "item.lotmcraft.passive_luck_ability": "Passive Luck",
+  "item.lotmcraft.passive_luck_ability.description": "Gain Passive Luck that grows with your Sequence",
+
   "item.lotmcraft.paper_dagger_ability": "Paper Daggers",
   "item.lotmcraft.paper_dagger_ability.description": "Right click with paper to throw it as a dagger",
   "item.lotmcraft.puppeteering_enhancements_ability": "Puppeteering Enhancements",
@@ -270,6 +272,7 @@
   "_comment003": "Effects-----------------------------------------------------------------------------",
   "effect.lotmcraft.asleep": "Asleep",
   "effect.lotmcraft.loosing_control": "Loosing Control",
+  "effect.lotmcraft.luck": "Luck",
 
   "_comment004": "Sounds-----------------------------------------------------------------------------",
   "sounds.lotmcraft.midnight_poem": "Midnight Poem",
