--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -257,6 +257,7 @@
   "item.lotmcraft.passive_luck_ability": "Passive Luck",
   "ability.lotmcraft.passive_luck.dodge": "Dodged Attack through Luck",
   "ability.lotmcraft.passive_luck.crit": "Critical Hit through Luck",
+  "ability.lotmcraft.passive_luck.trip": "Your enemy tripped and took damage",
   "ability.lotmcraft.passive_luck.effect_remove": "You were cleansed of negative effects through Luck",
   "item.lotmcraft.passive_luck_ability.description": "Gain Passive Luck that grows with your Sequence",
 
