Steel Chains Ability

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -73,6 +73,7 @@
   "item.lotmcraft.steel_mastery_ability": "Steel Mastery",
   "ability.lotmcraft.steel_mastery.steel_skin": "Steel Skin",
   "ability.lotmcraft.steel_mastery.steel_chains": "Steel Chains",
+  "ability.lotmcraft.steel_mastery.no_trarget":"No Target found",
   "item.lotmcraft.chain_of_command_ability": "Chain of Command",
   "item.lotmcraft.fog_of_war_ability": "Fog of War",
   "item.lotmcraft.war_cry_ability": "War Cry",
