--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -212,6 +212,7 @@
   "item.lotmcraft.sealing_ability": "Sealing",
   "item.lotmcraft.space_tearing_ability": "Space Tearing",
   "item.lotmcraft.black_hole_ability": "Black Hole",
+  "item.lotmcraft.replicating_ability": "Replicating",
   "item.lotmcraft.distortion_field_ability": "Distortion Field",
 
   "item.lotmcraft.spectating_ability": "Spectating",
