Started Chain of Command Ability

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -75,6 +75,12 @@
   "ability.lotmcraft.steel_mastery.steel_chains": "Steel Chains",
   "ability.lotmcraft.steel_mastery.no_trarget":"No Target found",
   "item.lotmcraft.chain_of_command_ability": "Chain of Command",
+  "ability.lotmcraft.chain_of_command.entity_teleport": "Moved Entity",
+  "ability.lotmcraft.chain_of_command.follow_mode": "Follow Mode",
+  "ability.lotmcraft.chain_of_command.attack": "Attack",
+  "ability.lotm.chain_of_command.entity_released": "Released the Subordinate",
+  "ability.lotmcraft.chain_of_command.no_entity_found": "Found no entity",
+  "ability.lotmcraft.chain_of_command.no_consent": "The entity did not want to become your subordinate",
   "item.lotmcraft.fog_of_war_ability": "Fog of War",
   "item.lotmcraft.war_cry_ability": "War Cry",
   "item.lotmcraft.war_cry_ability.description": "A deafening cry that damages your enemies and boosts your abilities",
