Psyche Storm Ability

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -235,6 +235,8 @@
   "item.lotmcraft.battle_hypnosis_ability": "Battle Hypnosis",
   "item.lotmcraft.dragon_scales_ability": "Dragon Scales",
 
+  "item.lotmcraft.psyche_storm_ability": "Psyche Storm",
+
 
   "lotm.ability.cogitation.tick": "Cogitating",
 
