--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -236,6 +236,7 @@
   "item.lotmcraft.dragon_scales_ability": "Dragon Scales",
 
   "item.lotmcraft.psyche_storm_ability": "Psyche Storm",
+  "item.lotmcraft.calamity_attraction_ability": "Calamity Attraction",
 
 
   "lotm.ability.cogitation.tick": "Cogitating",
