--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -185,7 +185,8 @@
   "item.lotmcraft.plague_ability": "Plague",
   "item.lotmcraft.mirror_world_traversal_ability": "Mirror World Traversal",
   "ability.lotm.mirror_world_traversal.no_glass": "No suitable glass surface found",
-
+  "item.lotmcraft.curse_ability": "Curse",
+  "ability.lotmcraft.curse.target_missing": "You need to move closer to your target",
 
   "item.lotmcraft.plant_nurturing_ability": "Plant Nurturing",
   "item.lotmcraft.healing_ability": "Healing",
