--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -188,6 +188,9 @@
   "item.lotmcraft.curse_ability": "Curse",
   "ability.lotmcraft.curse.target_missing": "You need to move closer to your target",
   "item.lotmcraft.petrification_ability": "Petrification",
+  "ability.lotmcraft.petrification.target": "Petrify your Targets",
+  "ability.lotmcraft.petrification.area": "Petrify the area",
+  "ability.lotmcraft.petrification.griefing_disabled": "You need to enable griefing",
 
   "item.lotmcraft.plant_nurturing_ability": "Plant Nurturing",
   "item.lotmcraft.healing_ability": "Healing",
@@ -303,6 +306,7 @@
   "effect.lotmcraft.loosing_control": "Loosing Control",
   "effect.lotmcraft.luck": "Luck",
   "effect.lotmcraft.unluck": "Unluck",
+  "effect.lotmcraft.petrification": "Petrification",
 
   "_comment004": "Sounds-----------------------------------------------------------------------------",
   "sounds.lotmcraft.midnight_poem": "Midnight Poem",
