New Abilities and centralized Shader System

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -126,6 +126,10 @@
   "ability.lotmcraft.flame_spells.sulfur_fireball": "Sulfur Fireball",
   "ability.lotmcraft.flame_spells.volcanic_eruption": "Volcanic Eruption",
   "item.lotmcraft.language_of_foulness_ability": "Language of Foulness",
+  "ability.lotmcraft.language_of_foulness.slow": "Slow",
+  "ability.lotmcraft.language_of_foulness.corruption": "Corruption",
+  "ability.lotmcraft.language_of_foulness.death": "Death",
+  "ability.lotmcraft.language_of_foulness.no_target": "No Target found",
   "item.lotmcraft.avatar_of_desire_ability": "Avatar of Desire",
   "item.lotmcraft.defiling_seed_ability": "Defiling Seed",
   "ability.lotmcraft.defiling_seed.no_target": "No Target found",
