--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -56,6 +56,8 @@
   "item.lotmcraft.flaring_sun_ability": "Flaring Sun",
   "item.lotmcraft.wall_of_light_ability": "Wall of Light",
   "item.lotmcraft.sword_of_justice_ability": "Sword of Justice",
+  "item.lotmcraft.spear_of_light_ability": "Spear of Light",
+  "item.lotmcraft.solar_envoy_ability": "Solar Envoy",
 
   "item.lotmcraft.trap_ability": "Trap",
   "item.lotmcraft.provoking_ability": "Provoking",
