--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -58,6 +58,7 @@
   "item.lotmcraft.sword_of_justice_ability": "Sword of Justice",
   "item.lotmcraft.spear_of_light_ability": "Spear of Light",
   "item.lotmcraft.solar_envoy_ability": "Solar Envoy",
+  "item.lotmcraft.wings_of_light_ability": "Wings of Light",
 
   "item.lotmcraft.trap_ability": "Trap",
   "item.lotmcraft.provoking_ability": "Provoking",
